# video-editing-rl-bench-final

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
configs/: final_model_matrix.tsv
docker/agent-cpu/: Dockerfile
docs/: repo_framework.md  task_specs.md  vps_runbook.md
prompts/: general_agent_prompt.md  tools_cpu.md  youtube_task_design_worker_prompt.md
report/: main.tex
reports/: final_interview_scores_abs.tsv  pancake_final_20260517_medium_llm_scores.tsv  piecewise_sync_rerun_medium_scores.json  piecewise_sync_rerun_medium_scores.tsv  piecewise_sync_rerun_medium_summary.md  tasks_and_rubrics.tsv
runs/final_interview_claude_haiku45_medium/: run.json  score.json
runs/final_interview_claude_opus47_medium/: run.json  score.json
runs/final_interview_claude_sonnet46_medium/: run.json  score.json
runs/final_interview_gemini31flash_lite_medium/: run.json  score.json
runs/final_interview_gemini31pro_preview_medium/: run.json  score.json
runs/final_interview_gpt54_medium/: run.json  score.json
runs/final_interview_gpt54mini_medium/: run.json  score.json
runs/final_interview_gpt55_medium/: run.json  score.json
runs/pancake-final-20260517-medium-gpt54/: run.pid  (+3 more)
scripts/: bootstrap_ubuntu.sh  build_agent_image.sh  demo_one_task_pipeline.sh  run_final_matrix.sh  setup_vps.sh
tasks/: README.md  TASK_PROPOSAL_TEMPLATE.md  review_worker_11_to_16.md  review_worker_1_to_5.md  review_worker_6_to_10_homogeneity.md  selected_pancake_expert_vertical_short.md  selected_piecewise_av_sync_repair.md  selected_rough_interview_caption_cleanup.md
(+260 files in other folders)
